--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.2.1
-numpy==1.21.5
+numpy>=1.14.1
 opencv-python==4.3.0.38
 parso==0.6.2
 pexpect==4.8.0
